    non-root.
  * Work around perl $_ scoping nonsense that caused breakage when loading
    external plugins.
  * style.css: Add missing semicolon. Closes: #497176 
  * filecheck: Fall back to testing for binary or plain text files
    if no mime type is detected.
  * table: Support header=column to make the table header be the first
    column of the data. (AlexandreDupas)

 -- Joey Hess <joeyh@debian.org>  Thu, 28 Aug 2008 16:08:18 -0400

ikiwiki (2.62.1) unstable; urgency=low

  * filecheck: Fixed two bits broken in move from attachment.

 -- Joey Hess <joeyh@debian.org>  Thu, 28 Aug 2008 13:04:47 -0400

ikiwiki (2.62) unstable; urgency=low

  * Avoid using cp -a (again). (HenrikBrixAndersen)
  * Avoid using hostname -f for portability to eg, OS X, use Net::Domain
    instead, and prompt if it fails.
  * Fix bug in wikiname sanitisation in the setup automator.
  * ikiwiki-makerepo: Added support for monotone. (Thomas Keller)
  * map: The fix for #449285 was buggy and broke display of parents in certain
    circumstances.
  * teximg: The prefix is configurable, and has changed to not include the
    nonstandard mhchem by default. (willu)
  * teximg: dvipng is used if available to render images. Its output is
    antialiased and better than dvips. If not available, the old dvips+convert
    chain will be used. (willu)
  * Drop suggests on texlive-science, add suggests on dvipng.
  * listdirectives: New plugin. (willu)
  * filecheck: New plugin factoring out the PageSpec additions that were
    originally part of the attachment plugin.
  * edittemplate: Don't wipe out edits on preview.
  * color: New plugin from ptecza.
  * autoindex: Avoid re-adding previously deleted (or renamed) pages.

 -- Joey Hess <joeyh@debian.org>  Wed, 27 Aug 2008 15:14:09 -0400

ikiwiki (2.61) unstable; urgency=low

  * poll: Fix typo that broke plugin.
  * graphviz: Fix breakage of the name of the preprocessor directive.

 -- Joey Hess <joeyh@debian.org>  Thu, 14 Aug 2008 18:13:22 -0400